<resources>
    <string name="app_name">Output Report</string>
    <string name="title_text">Output Report</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Spreadsheet ID:</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="input_spreadsheet_id">Input Spreadsheet ID…</string>
    <string name="co">Có</string>
    <string name="t_ng_ca">Tăng ca</string>
    <string name="c">Có</string>
    <string name="kh_ng">Không</string>
    <string name="in_out">In/Out</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="title_activity_add_info">AddInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sodon">Số Đơn</string>
    <string name="may">Máy</string>
    <string name="tenhang">Tên hàng</string>
    <string name="sotam">Số tấm</string>
    <string name="trong">Trống</string>
    <string name="ghichu">Ghi chú</string>
    <string name="loaihang">Loại hàng</string>
    <string name="don">Đơn</string>
    <string name="taiche">Tái chế</string>
    <string name="ok">OK</string>
    <string name="huy">Hủy</string>
    <string name="change_spreadsheetid">Change SpreadsheetId</string>
    <string name="nhapmatkhau">Nhập mật khẩu</string>
    <string name="kiemtra">Kiểm tra</string>
    <string name="loaicongdoan">Loại công đoạn</string>
    <string name="chuan">Chuẩn</string>
    <string name="them">Thêm</string>
    <string name="big_text"><big>Big text.</big></string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">API fail</string>
    <string name="action_description_orderNo">Hãy quét mã cho \'Số Đơn\'!</string>
    <string name="action_description_machineNo">Hãy quét mã cho \'Máy\'!</string>
    <string name="alert_description_orderNo">Mã vạch phải bắt đầu bằng \'P\' hoặc \'M\'</string>
    <string name="alert_description_machineNo">Mã vạch phải bắt đầu bằng \'P\' hoặc \'M\'</string>
    <string name="alert_description_title">Sai Format</string>
    <string name="alert_description_action">Quét lại</string>
    <string name="success_message">Thêm thành công</string>
    <string name="fail_message">Thêm số đơn \'%1$s\' thất bại!</string>
    <string name="check_condition_orderNo_1">P</string>
    <string name="check_condition_orderNo_2">M</string>
    <string name="check_condition_machineNo">#</string>


    <string name="CAMERA_PERMISSION_TITLE">Permission</string>
    <string name="CAMERA_PERMISSION_MESSAGE">Please provide the camera permission for using all the features of the app</string>
    <string name="CAMERA_PERMISSION_MESSAGE_DENIED">You have denied some permission. Allow all permission at [Settings] > [Permissions]</string>
    <string name="CAMERA_PERMISSION_ALLOW">Proceed</string>
    <string name="CAMERA_PERMISSION_DENIED">Cancel</string>
    <string name="CAMERA_PERMISSION_DENIED_EXIT">No, Exit app</string>
    <string name="CAMERA_PERMISSION_ALLOW_SETTINGS">Settings</string>
    <string name="WRONG_PASSWORD_TEXT">Sai mật khẩu</string>

</resources>
